--- a/colours.css
+++ b/colours.css
@@ -1,3 +1,4 @@
+:root {
 --ttui_parchment-900: #4b4130;
 --ttui_parchment-800: #655724; 
 --ttui_parchment-700: #75673b;  
@@ -260,3 +261,5 @@
 --color-stone-800: oklch(0.268 0.007 34.298); 
 --color-stone-900: oklch(0.216 0.006 56.043); 
 --color-stone-950: oklch(0.147 0.004 49.25);
+
+}
