--- a/HomebrewFonts.css
+++ b/HomebrewFonts.css
@@ -20,8 +20,9 @@
 
 @font-face {
     font-family: "ITC Golden Type";
-    src: url("https://db.onlinewebfonts.com/t/ac0b82c1906cbb40487985bfe37ff007.woff2")format("woff2");
-    font-variant: normal;}
+    src: url("https://db.onlinewebfonts.com/t/836fe4a51b422119b37036b112316ed4.woff2")format("woff2");
+    font-variant: normal;
+}
 
 @font-face {
     font-family: "ITC Golden Type";
