--- a/HomebrewFonts.css
+++ b/HomebrewFonts.css
@@ -22,12 +22,24 @@
     font-family: "ITC Golden Type";
     src: url("https://db.onlinewebfonts.com/t/836fe4a51b422119b37036b112316ed4.woff2")format("woff2");
     font-variant: normal;
-}
+font-weight: 400;}
+
+@font-face {
+    font-family: "ITC Golden Type";
+    src: url("https://db.onlinewebfonts.com/t/b612eea9de2464eca5c638f50d2c2b82.woff2")format("woff2");
+font-weight: 700;}
 
 @font-face {
     font-family: "ITC Golden Type";
     src: url("https://db.onlinewebfonts.com/t/ac0b82c1906cbb40487985bfe37ff007.woff2")format("woff2");
-    font-variant: small-caps;}
+    font-variant: small-caps;
+    font-weight: 700;}
+
+@font-face {
+    font-family: "ITC Golden Type";
+    src: url("https://db.onlinewebfonts.com/t/ac0b82c1906cbb40487985bfe37ff007.woff2")format("woff2");
+    font-variant: small-caps;
+    font-weight: 400}
 
     @font-face {
     font-family: "Graveur";
