--- a/HomebrewFonts.css
+++ b/HomebrewFonts.css
@@ -91,12 +91,12 @@ font-weight: 400;}
     src: url("https://db.onlinewebfonts.com/t/2ae1496b185cee82f1df00088066e9da.woff2")format("woff2");
     
     @font-face {
-    font-family: "Elzevir";
+    font-family: "1669 Elzevir";
     src: url("https://db.onlinewebfonts.com/t/82c7117d84ef3a848238b38c122d8f64.woff2")format("woff2");
     font-style: normal;}
     
     @font-face {
-    font-family: "Elzevir";
+    font-family: "1669 Elzevir";
     src: url("https://db.onlinewebfonts.com/t/2b1b8b1712fad76b8e6f9b541f4f6433.woff2")format("woff2");
     font-style: italic;}
     
