--- a/vault-DCLXXXIV-sigils.css
+++ b/vault-DCLXXXIV-sigils.css
@@ -1,6 +1,10 @@
-@font-face {
-  font-family: 'Caslon Pro';
-  src: url("fonts/ACaslonPro-Regular.otf") format('otf');
-  font-weight: normal;
-  font-style: normal;
-}
+@font-face { font-family: 'Arno Pro'; src: url('fonts/ArnoPro-Regular.woff2') format('woff2'); font-weight: 400; font-style: normal; }
+@font-face { font-family: 'Arno Pro'; src: url('fonts/ArnoPro-Italic.woff2') format('woff2'); font-weight: 400; font-style: italic; }
+
+@font-face { font-family: 'Arno Pro'; src: url('fonts/ArnoPro-Smbd.woff2') format('woff2'); font-weight: 600; font-style: normal; }
+@font-face { font-family: 'Arno Pro'; src: url('fonts/ArnoPro-SmbdItalic.woff2') format('woff2'); font-weight: 600; font-style: italic; }
+
+@font-face { font-family: 'Arno Pro'; src: url('fonts/ArnoPro-Bold.woff2') format('woff2'); font-weight: 700; font-style: normal; }
+@font-face { font-family: 'Arno Pro'; src: url('fonts/ArnoPro-BoldItalic.woff2') format('woff2'); font-weight: 700; font-style: italic; }
+
+@font-face { font-family: 'Italia Std'; src: url('fonts/italiastd-book.woff2') format('woff2'); font-weight: 400; font-style: normal; }
