--- a/HomebrewFonts.css
+++ b/HomebrewFonts.css
@@ -44,7 +44,7 @@
     
     @font-face {
     font-family: "Rinceau";
-    src: url("https://db.onlinewebfonts.com/t/2ae1496b185cee82f1df00088066e9da.woff2")format("woff2");
+    src: url("https://db.onlinewebfonts.com/t/2ae1496b185cee82f1df00088066e9da.woff2")format("woff2");}
     
     @font-face {
     font-family: "Elzevir";
