--- a/vault-DCLXXXIV-sigils.css
+++ b/vault-DCLXXXIV-sigils.css
@@ -1,16 +1,3 @@
-@font-face { font-family: 'Arno Pro'; src: url('fonts/ArnoPro-Regular.woff2') format('woff2'); font-weight: 400; font-style: normal; }
-@font-face { font-family: 'Arno Pro'; src: url('fonts/ArnoPro-Italic.woff2') format('woff2'); font-weight: 400; font-style: italic; }
-
-@font-face { font-family: 'Arno Pro'; src: url('fonts/ArnoPro-Smbd.woff2') format('woff2'); font-weight: 600; font-style: normal; }
-@font-face { font-family: 'Arno Pro'; src: url('fonts/ArnoPro-SmbdItalic.woff2') format('woff2'); font-weight: 600; font-style: italic; }
-
-@font-face { font-family: 'Arno Pro'; src: url('fonts/ArnoPro-Bold.woff2') format('woff2'); font-weight: 700; font-style: normal; }
-@font-face { font-family: 'Arno Pro'; src: url('fonts/ArnoPro-BoldItalic.woff2') format('woff2'); font-weight: 700; font-style: italic; }
-
-@font-face { font-family: 'Italia Std'; src: url('fonts/italiastd-book.woff2') format('woff2'); font-weight: 400; font-style: normal; }
-
-@font-face { font-family: 'MexTeq'; src: url('fonts/MexicanTequila-Italic.woff2') format('woff2'); font-weight: 400; font-style: normal; }
-
 @font-face { 
   font-family: 'Gans Blasones'; 
   src: url('fonts/GansBlasones.woff2') format('woff2');}
@@ -18,3 +5,17 @@
 @font-face { 
   font-family: 'Gans Blasones Two'; 
   src: url('fonts/GansBlasonesTwo.woff2') format('woff2');}
+
+@font-face { 
+  font-family: 'JuniusVF'; 
+  src: url('fonts/JuniusVF.woff2') format('woff2');}
+
+@font-face { 
+  font-family: 'Junicode VF'; 
+  src: url('fonts/JunicodeVF-Roman.woff2') format('woff2');
+  font-style: normal;}
+
+@font-face { 
+  font-family: 'Junicode VF'; 
+  src: url('fonts/JunicodeVF-Italic.woff2') format('woff2');
+  font-style: italic;}
