--- a/vault-DCLXXXIV-sigils.css
+++ b/vault-DCLXXXIV-sigils.css
@@ -32,5 +32,4 @@
 
 @font-face { 
   font-family: 'JunicodeTwo'; 
-  src: url('fonts/JunicodeTwoBetaVF-Roman.woff2') format('woff2');
-  font-style: italic;}
+  src: url('fonts/JunicodeTwoBetaVF-Roman.woff2') format('woff2');}
